# DatebaseToDingTalkAITable

./: main.py  pyproject.toml
docs/: 需求与实现方案.md
src/datebasetodingtalkaitable/: __init__.py  app.py  config.py  db_client.py  dingtalk_client.py  record_value.py  sync_service.py
src/datebasetodingtalkaitable.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/datebasetodingtalkaitable/static/: index.html
